# ZX3D50CE02S

./: CMakeLists.txt  README.md  sdkconfig
components/i2c_bus/: i2c_device.c  i2c_device.h
components/screen/controller_driver/st7796/: st7796.c
components/touch_panel/: CMakeLists.txt  touch_panel.c
components/touch_panel/calibration/: touch_calibration.c
main/: CMakeLists.txt  board.h  main.c  screen.c
